--- a/custom_components/electrolux_status/manifest.json
+++ b/custom_components/electrolux_status/manifest.json
@@ -2,14 +2,14 @@
   "domain": "electrolux_status",
   "name": "Electrolux Care Integration V2",
   "codeowners": [
-    "@albaintor"
+    "@oriolplav"
   ],
   "config_flow": true,
   "dependencies": [],
-  "documentation": "https://github.com/albaintor/homeassistant_electrolux_status",
+  "documentation": "https://github.com/oriolplav/homeassistant_electrolux_status",
   "homekit": {},
   "iot_class": "cloud_polling",
-  "issue_tracker": "https://github.com/albaintor/homeassistant_electrolux_status/issues",
+  "issue_tracker": "https://github.com/oriolplav/homeassistant_electrolux_status/issues",
   "requirements": [
     "pyelectroluxocp==0.0.9"
   ],
